salesforce/force-app/main/default/objects/Audit_Log__c/Audit_Log__c.object-meta.xml
<CustomObject>
    <description>Immutable audit trail for all system events and decisions (AI actions, evaluations, overrides, etc.)</description>
    <label>Audit Log</label>
    <nameField>
        <displayFormat>AUD-{000000}</displayFormat>
        <label>Audit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>