salesforce/force-app/main/default/objects/Audit_Log__c/fields/Actor_Type__c.field-meta.xml
<CustomField>
    <fullName>Actor_Type__c</fullName>
    <description>Who performed the action</description>
    <label>Actor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>Human</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>