salesforce/force-app/main/default/objects/Audit_Log__c/fields/Actor_User__c.field-meta.xml
<CustomField>
    <fullName>Actor_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who performed the action — populated when Actor_Type is Human</description>
    <label>Actor User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Logs_Actor</relationshipName>
    <type>Lookup</type>
</CustomField>