salesforce/force-app/main/default/objects/Audit_Log__c/fields/AI_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence__c</fullName>
    <description>AI confidence score when applicable</description>
    <label>AI Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>