salesforce/force-app/main/default/objects/Audit_Log__c/fields/AI_Model_Name__c.field-meta.xml
<CustomField>
    <fullName>AI_Model_Name__c</fullName>
    <description>Name of the AI model invoked for this event — populated when Actor_Type is AI</description>
    <label>AI Model Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>