salesforce/force-app/main/default/objects/Audit_Log__c/fields/AI_Model_Version__c.field-meta.xml
<CustomField>
    <fullName>AI_Model_Version__c</fullName>
    <description>Version of the AI model invoked for this event</description>
    <label>AI Model Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>