salesforce/force-app/main/default/objects/Audit_Log__c/fields/Event_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Event_DateTime__c</fullName>
    <description>When the audit event occurred</description>
    <label>Event Date/Time</label>
    <type>DateTime</type>
</CustomField>