salesforce/force-app/main/default/objects/Audit_Log__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of audit event</description>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Document_Uploaded</fullName>
                <label>Document Uploaded</label>
            </value>
            <value>
                <fullName>AI_Extraction</fullName>
                <label>AI Extraction</label>
            </value>
            <value>
                <fullName>Compliance_Evaluated</fullName>
                <label>Compliance Evaluated</label>
            </value>
            <value>
                <fullName>Manual_Override</fullName>
                <label>Manual Override</label>
            </value>
            <value>
                <fullName>Checklist_Generated</fullName>
                <label>Checklist Generated</label>
            </value>
            <value>
                <fullName>Status_Changed</fullName>
                <label>Status Changed</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>