salesforce/force-app/main/default/objects/Audit_Log__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>Value after the change (for audit trail)</description>
    <label>New Value (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>