salesforce/force-app/main/default/objects/Audit_Log__c/fields/Original_Value__c.field-meta.xml
<CustomField>
    <fullName>Original_Value__c</fullName>
    <description>Value before the change (for audit trail)</description>
    <label>Original Value (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>