salesforce/force-app/main/default/objects/Audit_Log__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason for the action or override</description>
    <label>Reason / Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>