salesforce/force-app/main/default/objects/Audit_Log__c/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <description>The object type of the related record this audit event concerns</description>
    <label>Related Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Compliance_Document</fullName>
                <label>Compliance Document</label>
            </value>
            <value>
                <fullName>Compliance_Assessment</fullName>
                <label>Compliance Assessment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>