salesforce/force-app/main/default/objects/Audit_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>ID of the record this audit entry relates to (polymorphic support)</description>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>