salesforce/force-app/main/default/objects/Audit_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Actor_Type__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Event_DateTime__c</columns>
    <columns>New_Value__c</columns>
    <columns>Reason__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Related_Object__c</columns>
    <columns>Related_Record_Id__c</columns>
    <columns>Source_System__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>